--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,8 @@ services:
         volumes:
             - ${PATH_PREFIX}/working_dir:/home/jovyan/work
         depends_on:
-            - postgres
+            - postgis
+            - mongo
         environment:
             - POSTGRES_USER=${PG_USER}
             - POSTGRES_PASSWORD=${PG_PASS}
