--- a/env.example
+++ b/env.example
@@ -1,6 +1,3 @@
-PATH_PREFIX=~/Code/sd_airflow
-ENV_FILE=local.env
-AIRFLOW_DB_USER=airmaster
-AIRFLOW_DB_PASS=airmasterPass
-AIRFLOW_RMQ_USER=airflow
-AIRFLOW_RMQ_PASS=airflow
+PATH_PREFIX=.
+PG_USER=airmaster
+PG_PASS=airmasterPass
